[package]
name = "hello-world-yocto"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Awarty/hello-world-yocto"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#openssl = { version = "0.10", features = ["vendored"] }
openssl = "0.10"
