[package]
name = "device_service"
version = "0.1.0"
edition = "2021"
include = ["configs/*"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logger = { path = "../libs/logger" }

log = "0.4"
anyhow = "1.0.65"
curl = "0.4.44"
openssl = { version = "0.10", features = ["vendored"] }
paho-mqtt = { version = "0.11", features = ["vendored-ssl"] }
tokio = {version = "1.0", features = ["full"] }
async-trait = "0.1.59"
futures = { version = "0.3.*" }
async-std = "1.12.0"
base64 = "0.13.1"
hmac = "0.12.1"
sha2 = "0.10.6"
chrono = "0.4.23"
serde_urlencoded = "0.7.1"
reqwest = "0.11.13"
serde = { version = "1.0.149", features = ["derive"] }
mac_address = "1.1.4"
serde_json = "1.0.89"
azure_iot_sdk = "0.8.0"

[build-dependencies]
cmake = "*"
copy_to_output = "2.0.0"
glob = "0.3"
