[package]
name = "itxpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
serde_json = "1.0.91"
serde = "1.0.152"
serde_derive = "1.0.152"
regex = "1.7.1"
