[package]
name = "hello-world-yocto"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Awarty/hello-world-yocto"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#openssl = { version = "0.10", features = ["vendored"] }
#openssl-sys = { version = "0.9.83", features = ["vendored"] }

paho-mqtt = { version = "0.12", features = ["vendored-ssl"] }
#paho-mqtt = { version = "0.12" }

#openssl = "0.10"
#openssl-sys = "0.9.83"
log = "0.4"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
json = "0.12.4"
anyhow = "1.0.65"
chrono = { version = "0.4.11", features = ["serde"] }
futures = { version = "0.3.*" }
async-trait = "0.1.64"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

